# shadps4

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: linux-appimage-qt.sh  shadps4
.github/workflows/: linux-qt.yml  windows-qt.yml  windows.yml
ext/zlib/lib/: libz-static.lib  libz.lib
shadPS4/: shadPS4.vcxproj  shadPS4.vcxproj.filters
shadPS4/emulator/fileFormat/: Keys.h  PFS_HEADERS.h  PKG.cpp  PKG.h  PSF.cpp  crypto.cpp  crypto.h
shadPS4/gui/: game_list_frame.cpp  game_list_frame.h  gui_settings.h
src/: CMakeLists.txt  main.cpp  resource.qrc  resources.qrc
src/common/: common.h  crypto.cpp  crypto.h  endian.h  endianness.h  io_file.cpp  io_file.h  keys.h  types.h
src/emulator/: loader.cpp  loader.h
src/emulator/file_format/: pfs.h  pkg.cpp  pkg.h  pkg_type.cpp  pkg_type.h  psf.cpp  psf.h
src/images/: resources.qrc
src/qt_gui/: custom_dock_widget.h  custom_table_widget_item.cpp  custom_table_widget_item.h  game_info.h  game_install_dialog.cpp  game_install_dialog.h  game_list_frame.cpp  game_list_frame.h  game_list_grid.cpp  game_list_grid.h  game_list_grid_delegate.cpp  game_list_grid_delegate.h  game_list_item.h  game_list_table.cpp  game_list_table.h  game_list_utils.h  gui_save.h  gui_settings.cpp  gui_settings.h  main_window.cpp  main_window.h  main_window.ui  main_window_themes.cpp  main_window_themes.h  main_window_ui.h  qt_utils.h  settings.cpp  settings.h
tools/ModuleGenerator/: CMakeLists.txt  main.cpp
tools/ModuleGenerator/libraries/: libSceGnmDriver.cpp  libSceGnmDriver.h
